# NativeOpenGL

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xgbk/nativeopengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseOpengl.cpp  BaseOpengl.h  CMakeLists.txt  EglHelper.cpp  EglHelper.h  EglThread.cpp  EglThread.h  TextureOpenGL.cpp  TextureOpenGL.h  TriangleOpenGL.cpp  TriangleOpenGL.h  VAOTextureOpenGL.cpp  VAOTextureOpenGL.h  VBOTextureOpenGL.cpp  VBOTextureOpenGL.h  WlAndroidLog.h  native-lib.cpp
app/src/main/java/com/xgbk/nativeopengl/: MainActivity.java  NativeEglActivity.java
app/src/main/java/com/xgbk/nativeopengl/helper/: EglHelper.java
app/src/main/java/com/xgbk/nativeopengl/view/: EGL3SurfaceView.java
app/src/main/res/layout/: activity_main.xml  activity_native_egl.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xgbk/nativeopengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
